# Hash-Check

./: .gitignore  Cargo.toml  README.md
src/: args.rs  handle_file.rs  handle_virustotal.rs  main.rs  utils.rs
