[package]
name = "hash_checker"
authors = ["Matan Shitrit (0xMegaByte)"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0.0"
md5 = "0.7.0"
reqwest = "0.11.17"
serde = { version = "1.0.163", features = ["derive"]}
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
